traces/bug_36.txt
src/medit/util.c:32: error: DEAD_STORE
  The value written to &font_style (type void*) is never used.
Showing all 1 steps of the trace


src/medit/util.c:32:7: Write of unused value
30.       font_style = GLUT_BITMAP_TIMES_ROMAN_10;
31.       if (size == 24)
32.         font_style = GLUT_BITMAP_TIMES_ROMAN_24;
            ^
33.     }
34.     /*
